@@ -1,0 +1,16 @@
+# $NetBSD: Makefile,v 1.1 2019/07/31 13:05:34 brook Exp $
+
+CATEGORIES=	math R
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	${R_HOMEPAGE_BASE}/RandomFieldsUtils/
+COMMENT=	Utilities for the simulation and analysis of random fields
+LICENSE=	gnu-gpl-v3
+
+R_PKGNAME=	RandomFieldsUtils
+R_PKGVER=	0.5.3
+
+USE_LANGUAGES=	c c++ fortran
+
+.include "../../math/R/Makefile.extension"
+.include "../../mk/bsd.pkg.mk"
