@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3100 2019/07/31 13:03:20 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3101 2019/07/31 13:05:34 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5057,3 +5057,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added graphics/R-effects version 4.1.1 [brook 2019-07-31]
 	Added graphics/R-viridis version 0.5.1 [brook 2019-07-31]
 	Added math/R-Formula version 1.2.3 [brook 2019-07-31]
+	Added math/R-RandomFieldsUtils version 0.5.3 [brook 2019-07-31]
